test/syntax/pass/if.sync
let node f (s : bool) =
  if s then 0
  else 1

(* Custom bool-like type *)
type mybool =
  | MyFalse
  | MyTrue

let node g (s : mybool) =
  if s then 0
  else 1
