test/syntax/fail/not_boolean_like_in_if_too_few_constrs.sync
type mytype =
  | A

let f (s : mytype) =
  if s then 0
  else 0
